--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div id="genBox">
             <input id="genJs" type="button" value="生成代码" onclick="genJS()">
             <span id="info" style="color: red"></span>
-            <input id="js" type="text" readonly="readonly" style='margin-top: 20px;'>
+            <input id="js" type="text"  style='margin-top: 20px;'>
         </div>
 
     </div>
