--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <body>
     <div id="container">
-        <h1>配置生成器</h1>
+        <h1>代码生成器</h1>
         <div class="confBox">
             <div class="line">
                 <span class="lineTitle">标签尺寸:</span> <input class="lineInput" id="tag_font_size" type="text" placeholder="请输入整数，若不修改则此项留空">
