--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h1>代码生成器</h1>
         <div class="confBox">
             <div class="line">
-                <span class="lineTitle">标签尺寸:</span> <input class="lineInput" id="tag_font_size" type="text" placeholder="请输入整数，若不修改则此项留空">
+                <span class="lineTitle">ExHentai标签缩放尺寸:</span> <input class="lineInput" id="tag_font_size" type="text" placeholder="请输入整数，若不修改则此项留空">
             </div>
         </div>
         <div id="genBox">
