--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
         #js {
             width: 400px;
+            height: 400px;
         }
 
         #genBox {
@@ -91,7 +92,7 @@
         <div id="genBox">
             <input id="genJs" type="button" value="生成代码" onclick="genJS()">
             <span id="info" style="color: red"></span>
-            <input id="js" type="text"  style='margin-top: 20px;'>
+            <textarea id="js" type="text"  style='margin-top: 20px;'></textarea>
         </div>
 
     </div>
