--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
             outline: none;
             border-radius: 4px; 
             box-sizing: border-box;
-
-            
         }
         .lineInput {
             
@@ -88,7 +86,7 @@
             var inputs = document.getElementsByClassName('lineInput')
             for (var i = 0; i < inputs.length; i++) {
                 if (inputs[i].value) {
-                    attrString += 's.setAttribute("' + inputs[i].getAttribute('name') + '",' + inputs[i].value + ');'
+                    attrString += 's.setAttribute("' + inputs[i].getAttribute('name') + '","' + inputs[i].value + '");'
                 }
             }
 
@@ -110,8 +108,9 @@
         <h1>代码生成器</h1>
         <div class="confBox">
             <input class="lineInput" name="version" type="text" value="1.3" style="display: none;">
-            <input class="lineInput" name="tag_font_size" type="text" placeholder="标签尺寸，请输入整数，不修改则此项留空">
-            <input class="lineInput" name="toolbar_size" type="text" placeholder="工具栏尺寸，请输入整数，不修改则此项留空">
+            <input class="lineInput" name="tag-fontsize" type="text" placeholder="自定义标签尺寸，请输入整数，不修改则此项留空">
+            <input class="lineInput" name="toolbar-size" type="text" placeholder="自定义工具栏尺寸，请输入整数，不修改则此项留空">
+            <input class="lineInput" name="line-color" type="text" placeholder="分割线颜色，格式为'#e5e5e5'，不修改则此项留空'">
 
         </div>
         <div id="genBox">
