--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="./web/element.css">
-    <link rel="stylesheet" href="./web/index.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="web/element.css">
+    <link rel="stylesheet" href="web/index.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1644182_kmnvv0rgw79.css">
 
     <script src="https://cdn.staticfile.org/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
-    <script src="./web/element.js"></script>
-    <script src="./web/index.js"></script>
+    <script src="web/element.js"></script>
+    <script src="web/index.js"></script>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <el-container id="container">
             <el-header height="80px">
                 <div class="logo">
-                    <img src="./web/icon.png" alt="">
+                    <img src="web/icon.png" alt="">
                     <span>代码生成器</span>
                 </div>
             </el-header>
